# dl-graph-studio

./: .gitignore  .prettierignore  AGENTS.md  PRD.md  README.md  eslint.config.js  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  vite.config.ts
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: roadmap-task.md
.github/workflows/: ci.yml
docs/architecture/: technical-stack.md
docs/roadmap/: roadmap-process.md
docs/superpowers/plans/: 2026-04-26-agent-roadmap-workflow.md  2026-05-01-milestone-ux-ui-hardening.md  2026-05-03-baseline-visual-system.md  2026-05-03-milestone-technical-audit.md  2026-05-03-product-owner-idea-intake.md  2026-05-03-start-task-in-progress.md  2026-05-04-extract-app-project-file-workflow.md  2026-05-04-phase-1-technical-audit-execution.md  2026-05-05-canvas-viewport-navigation-hardening.md  2026-05-05-connections-panel-space-management.md  2026-05-05-free-canvas-node-placement.md  (+11 more)
scripts/: validate-commit-message.mjs  validate-commit-message.test.mjs  validate-roadmap-issue.mjs  validate-roadmap-issue.test.mjs
src/: App.nodeDrag.test.tsx  App.test.tsx  App.tsx  EditorIconButton.test.tsx  EditorIconButton.tsx  ProjectActionsMenu.test.tsx  ProjectActionsMenu.tsx  main.tsx  projectFile.test.ts  projectFile.ts  styles.css  useEditorToast.test.tsx  useEditorToast.ts  useProjectFileWorkflow.test.tsx  useProjectFileWorkflow.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/test/: projectExportTestHelper.ts
tests/e2e/: editor-core.spec.ts
(+17 files in other folders)
